testData/inspections/inspectionSuppressor/suppressedForFile.s
*  @@@suppress_inspection@@@ M68kUnresolvedLabelReference

<error descr="Missing matching 'endm' closing directive">brokenMacro macro</error>

 bra INVALID_VALUE
